# lilit-lang

./: .gitignore  Cargo.toml  LICENSE  PROGRESS.md  README.md  ast.md  build.rs  build.sh  main  run.sh
examples/: age.l  array.l  array.lilit  assignment.lilit  bash.lilit  bash.sh  bash_char.lilit  char.l  class.l  instance_method.lilit  migrate.lilit  native.l  native_struct.lilit  printf.lilit  simple_bash.lilit  string.l  test.l
native/: lib.c  lib.ll  lib_original.ll  read.ll
playground/: README.md  a.out  add.c  add.ll  array_constant_size.c  array_constant_size.ll  array_dynamic_size.c  array_dynamic_size.ll  array_with_memcpy.c  array_with_memcpy.ll  bash.c  bash.out  boehm  boehm.c  boehm.ll  cast.c  cast.ll  debug  debug.ll  debug_simple  debug_simple.ll  func_with_params  func_with_params.c  func_with_params.ll  generic_array.c  generic_array.ll  if_else.c  if_else.ll  main_args.c  main_args.ll  malloc_free.c  malloc_free.ll  print_address.c  print_address.ll  read_file.c  read_file.ll  stdin.c  stdin.ll  strtol.c  strtol.ll  (+6 more)
playground/bash/: bash.c  bash.out  bash.sh
src/: ast.rs  lib.rs  lilit.lalrpop  lilit.rs  macros.rs  main.rs  scope.rs  semantics.rs  test_common.rs
src/analyse/: mod.rs  scope.rs  tpe.rs
src/emit/: helper.rs  mod.rs
src/index/: mod.rs  tree.rs
src/llvmgen/: gen.rs  mod.rs
src/parse/: combinator.rs  compilation_unit.rs  mod.rs  tpe.rs  tree.rs
src/semantics/: analysis.rs  mod.rs  scope.rs  tree.rs
src/syntax/: lilit.lalrpop  lilit.rs  mod.rs  tree.rs
src/tokenize/: combinator.rs  mod.rs  (+2 more)
tests/: main_test.rs
(+55 files in other folders)
