[package]
name = "lilit"
version = "0.1.0"
authors = ["tanin"]
build = "build.rs"

[dependencies]
lalrpop-util = "0.15.2"
regex = "0.2.0"
inkwell = { git = "https://github.com/tanin47/inkwell", rev = "46d576c63a7bec3a5ff4c81efbe74842f850ff0a", features = ["llvm6-0"] }

[build-dependencies]
lalrpop = "0.15.2"
